%%{init: {
  'theme': 'base',
  'themeVariables': {
    'primaryColor': '#F8FAFC',
    'primaryTextColor': '#0F172A',
    'primaryBorderColor': '#2563EB',
    'lineColor': '#334155',
    'secondaryColor': '#FEF3C7',
    'tertiaryColor': '#ECFDF5',
    'fontSize': '12px',
    'fontFamily': 'Inter, system-ui, -apple-system, sans-serif'
  }
}}%%
erDiagram
    users {
        unsigned_bigint id PK
        string nama "varchar(100)"
        string email "varchar(150)"
        string active_email "varchar(150) VIRTUAL, UK"
        string password "varchar(255)"
        string no_hp "varchar(50), Nullable"
        string active_no_hp "varchar(20) VIRTUAL, UK"
        string nik "varchar(50), Nullable"
        string active_nik "varchar(20) VIRTUAL, UK"
        string nama_wali "varchar(100), Nullable"
        string no_wali "varchar(20), Nullable"
        enum role "admin, penyewa"
        string foto "varchar(255), Nullable"
        tinyint is_active "Default 1"
        boolean require_password_change "Default false"
        timestamp deleted_at "Nullable, Index"
        timestamp created_at
        timestamp updated_at
    }

    kamar {
        unsigned_bigint id PK
        string nomor_kamar "varchar(50)"
        string active_nomor_kamar "varchar(50) VIRTUAL, UK"
        tinyint lantai "Default 1"
        enum tipe "standar, deluxe, vip"
        decimal luas_m2 "5,2"
        decimal harga_bulan "12,2"
        text deskripsi "Nullable"
        string foto "varchar(255), Nullable"
        enum status "tersedia, terisi, maintenance"
        timestamp deleted_at "Nullable, Index"
        timestamp created_at
        timestamp updated_at
    }

    fasilitas {
        unsigned_bigint id PK
        string nama "varchar(100) UK"
        string ikon "varchar(50), Nullable"
        text deskripsi "Nullable"
        boolean is_active "Default true"
        timestamp created_at
        timestamp updated_at
    }

    kamar_fasilitas {
        unsigned_bigint kamar_id PK, FK
        unsigned_bigint fasilitas_id PK, FK
    }

    penyewa {
        unsigned_bigint id PK
        unsigned_bigint user_id FK "1:1 Aktif / 1:N Historis"
        unsigned_bigint kamar_id FK
        decimal harga_sewa "12,2, Nullable (Immutable snapshot)"
        string nik "varchar(50)"
        date tanggal_masuk
        date tanggal_keluar "Nullable"
        date tanggal_keluar_seharusnya "Nullable"
        enum status "aktif, nonaktif"
        tinyint tanggal_billing "Default 1"
        enum tipe_sewa "harian, mingguan, bulanan"
        tinyint durasi "Default 1"
        decimal deposit "12,2, Default 0"
        string no_wali "varchar(20)"
        string nama_wali "varchar(100)"
        text catatan "Nullable"
        timestamp deleted_at "Nullable, Index"
        timestamp created_at
        timestamp updated_at
    }

    tagihan {
        unsigned_bigint id PK
        unsigned_bigint penyewa_id FK
        string order_id "varchar(50) UK"
        tinyint periode_bulan
        smallint periode_tahun
        date tanggal_tagihan
        date tanggal_jatuh_tempo
        decimal nominal_pokok "12,2"
        decimal nominal_denda "12,2, Default 0"
        decimal nominal_total "12,2"
        tinyint bulan_keterlambatan "Default 0"
        enum status "pending, lunas, gagal, kadaluarsa, terlambat"
        enum metode_pembayaran "midtrans, cash, Nullable"
        text keterangan "Nullable"
        timestamp created_at
        timestamp updated_at
    }

    pembayaran {
        unsigned_bigint id PK
        unsigned_bigint tagihan_id FK
        string transaction_id "varchar(100) UK"
        string payment_type "varchar(50), Nullable"
        string bank "varchar(20), Nullable"
        string va_number "varchar(30), Nullable"
        decimal nominal "12,2"
        string status_midtrans "varchar(50), Nullable"
        unsigned_bigint dikonfirmasi_oleh FK "Nullable"
        string signature_key "varchar(255), Nullable"
        json response_json "Nullable"
        datetime tanggal_bayar "Nullable"
        timestamp created_at
        timestamp updated_at
    }

    log_notifikasi {
        unsigned_bigint id PK
        unsigned_bigint penyewa_id FK
        unsigned_bigint tagihan_id FK "Nullable"
        enum channel "whatsapp, email, system"
        string event "varchar(50)"
        enum status "sukses, gagal"
        text pesan "Nullable"
        text error_msg "Nullable"
        timestamp created_at "Append-only"
    }

    reservasi {
        unsigned_bigint id PK
        unsigned_bigint user_id FK
        unsigned_bigint kamar_id FK
        unsigned_bigint dikonfirmasi_oleh FK "Nullable"
        unsigned_bigint penyewa_id FK "Nullable"
        enum tipe_sewa "harian, mingguan, bulanan"
        date tanggal_mulai
        date tanggal_selesai
        tinyint durasi "Default 1"
        decimal total_harga "12,2"
        enum status "pending, dp, lunas, dikonfirmasi, batal"
        enum metode_pembayaran "midtrans, cash, Nullable"
        boolean is_dp "Default false"
        decimal nominal_dp "12,2, Default 0"
        decimal nominal_sisa "12,2, Default 0"
        string snap_token "varchar(255), Nullable"
        string order_id "varchar(100), Nullable"
        string active_order_id "varchar(100) VIRTUAL, UK"
        string transaction_id "varchar(100), Nullable"
        text catatan_user "Nullable"
        text catatan_admin "Nullable"
        datetime tanggal_konfirmasi "Nullable"
        timestamp deleted_at "Nullable, Index"
        timestamp created_at
        timestamp updated_at
    }

    chat_messages {
        unsigned_bigint id PK
        unsigned_bigint reservasi_id FK
        unsigned_bigint sender_id FK
        text message
        boolean is_read "Default false"
        timestamp created_at "Append-only"
    }

    guest_chat_threads {
        unsigned_bigint id PK
        string session_token "varchar(255) UK, Index"
        string name "varchar(255)"
        string no_hp "varchar(255)"
        enum status "active, closed"
        timestamp created_at
        timestamp updated_at
    }

    guest_chat_messages {
        unsigned_bigint id PK
        unsigned_bigint guest_chat_thread_id FK
        enum sender_type "guest, admin"
        unsigned_bigint sender_id FK "Nullable"
        text message
        boolean is_read "Default false"
        timestamp created_at
        timestamp updated_at
    }

    keluhan {
        unsigned_bigint id PK
        unsigned_bigint penyewa_id FK
        string judul "varchar(150)"
        enum kategori "kamar, fasilitas_bersama, kebersihan, keamanan, lainnya"
        text deskripsi
        string foto_bukti "varchar(255), Nullable"
        enum status "pending, diproses, selesai"
        text tanggapan_admin "Nullable"
        datetime tanggal_selesai "Nullable"
        timestamp created_at
        timestamp updated_at
    }

    pengeluaran {
        unsigned_bigint id PK
        string nama_pengeluaran "varchar(150)"
        enum kategori "maintenance, utilitas, operasional, lainnya"
        decimal nominal "12,2"
        date tanggal_pengeluaran "Index"
        string bukti_nota "varchar(255), Nullable"
        text keterangan "Nullable"
        timestamp created_at
        timestamp updated_at
    }

    settings {
        string key PK "varchar(255)"
        text value "Nullable"
        timestamp created_at
        timestamp updated_at
    }

    customer_reviews {
        unsigned_bigint id PK
        string nama "varchar(100)"
        string pekerjaan "varchar(100), Nullable"
        unsigned_tinyint bintang "Default 5"
        text ulasan
        string foto "varchar(255), Nullable"
        timestamp created_at
        timestamp updated_at
    }

    faqs {
        unsigned_bigint id PK
        text pertanyaan
        text jawaban
        tinyint urutan "Default 0"
        tinyint is_active "Default 1"
        timestamp created_at
        timestamp updated_at
    }

    peraturan {
        unsigned_bigint id PK
        string judul "varchar(100)"
        text deskripsi
        string ikon "varchar(50)"
        integer urutan "Default 0"
        timestamp created_at
        timestamp updated_at
    }

    galleries {
        unsigned_bigint id PK
        string judul "varchar(100)"
        text deskripsi "Nullable"
        string foto "varchar(255)"
        integer urutan "Default 0"
        boolean is_active "Default true"
        timestamp created_at
        timestamp updated_at
    }

    pengumuman {
        unsigned_bigint id PK
        string judul "varchar(150)"
        text isi
        boolean is_active "Default true"
        timestamp created_at
        timestamp updated_at
    }

    notifikasi_khusus {
        unsigned_bigint id PK
        string sumber "varchar(255), Index"
        string tipe_aktivitas "varchar(255), Index"
        text deskripsi
        json data_detail "Nullable"
        unsigned_bigint user_id FK "Nullable"
        timestamp created_at
        timestamp updated_at
    }

    whatsapp_clicks {
        unsigned_bigint id PK
        string source "varchar(50)"
        unsigned_bigint kamar_id FK "Nullable"
        string ip_address "varchar(45), Nullable"
        text user_agent "Nullable"
        timestamp created_at "Index"
        timestamp updated_at
    }

    %% Definisi Relasi & Kardinalitas Sistem %%
    users ||--o{ penyewa : "user_id (1:1 Aktif / 1:N Historis)"
    kamar ||--o{ penyewa : "kamar_id (1:N)"
    
    kamar ||--|{ kamar_fasilitas : "kamar_id (1:N)"
    fasilitas ||--|{ kamar_fasilitas : "fasilitas_id (1:N)"

    penyewa ||--o{ tagihan : "penyewa_id (1:N)"
    tagihan ||--o{ pembayaran : "tagihan_id (1:N)"
    users ||--o{ pembayaran : "dikonfirmasi_oleh (1:N)"

    penyewa ||--o{ log_notifikasi : "penyewa_id (1:N)"
    tagihan ||--o{ log_notifikasi : "tagihan_id (1:N)"
    penyewa ||--o{ keluhan : "penyewa_id (1:N)"

    users ||--o{ reservasi : "user_id (1:N)"
    kamar ||--o{ reservasi : "kamar_id (1:N)"
    users ||--o{ reservasi : "dikonfirmasi_oleh (1:N)"
    penyewa ||--o{ reservasi : "penyewa_id (1:N)"

    reservasi ||--o{ chat_messages : "reservasi_id (1:N)"
    users ||--o{ chat_messages : "sender_id (1:N)"

    guest_chat_threads ||--o{ guest_chat_messages : "guest_chat_thread_id (1:N)"
    users ||--o{ guest_chat_messages : "sender_id (1:N)"

    users ||--o{ notifikasi_khusus : "user_id (1:N)"
    kamar ||--o{ whatsapp_clicks : "kamar_id (1:N)"
